--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -1,3 +1,32 @@
 page-details {
+    .details {
+        &-image {
+            background-color: #fff;
+            height: 200px;
+            overflow: hidden;
+            position: relative;
+            img {
+                transform: translateY(calc(100px - 50%));
+            }
+        }
+        &-header {
+            font-size: 20px;
+            margin: 0;
+            padding: $item-md-padding-left;
+            background-color: rgba(255, 255, 255, .8);
+            font-weight: normal;
+            position: absolute;
+            bottom: 0;
+            left: 0;
+            width: 100%;
 
+            @at-root .platform-ios & {
+                background-color: rgba(255, 255, 255, .3);
+                backdrop-filter: blur(15px);
+            }
+        }
+        &-description {
+            white-space: pre-line;
+        }
+    }
 }
