--- a/src/pages/mealboxes/mealboxes.scss
+++ b/src/pages/mealboxes/mealboxes.scss
@@ -1,3 +1,51 @@
 page-mealboxes {
+    .mealbox {
+        margin-bottom: 16px;
+        background-color: #dddddd; 
+        border-radius: 4px;
+        background-clip: padding-box;
+        box-shadow: 3px 3px 6px #dadada;
+        overflow: hidden;
+    }
+    .mealbox__upper {
+        padding: 20px 16px 16px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        position: relative;
+        height: 195px;
+    }
+    .mealbox__header {
+        font-size: 24px;
+        font-weight: 400;
+        color: #fff;
+        text-transform: uppercase;
+    }
+    .mealbox__menu-btn {
+        position: absolute;
+        left: 16px;
+        bottom: 8px;
+    }
+    .mealbox__price {
+        font-size: 16px;
+        font-weight: 200;
+        color: #fff;
+        position: absolute;
+        right: 16px;
+        bottom: 8px;
+        big {
+            font-size: 22px;
+            font-weight: 500;
+        }
+    }
+    .mealbox__meta {
+        font-family: -apple-system, 'Helvetica Neue', sans-serif;
+        font-size: 13px;
+        //font-weight: 200;
+        color: #000;
+        background-color: #fff;
+        padding: 8px;
+        display: flex;
+        justify-content: space-evenly;
 
+    }
 }
