--- a/src/pages/mealbox-configurator/mealbox-configurator.scss
+++ b/src/pages/mealbox-configurator/mealbox-configurator.scss
@@ -28,6 +28,7 @@ page-mealbox-configurator {
             overflow: hidden;
             line-height: 39px;
             font-size: 18px;
+            text-align: center;
             background-color: #f7f7f4;
             border-radius: 50%;
             margin: 0 8px;
