--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -1,3 +1,15 @@
 page-order {
-
+    .frequency {
+        font-size: 12px;
+        text-align: center;
+        padding: 1em;
+        display: inline-block;
+        border-radius: 3px;
+        background-color: #fff;
+        margin: 0 4px 1rem 4px;
+        &.selected {
+            background: #00884a;
+            color: #fff;
+        }
+    }
 }
