--- a/src/pages/mealbox-configurator-options/mealbox-configurator-options.scss
+++ b/src/pages/mealbox-configurator-options/mealbox-configurator-options.scss
@@ -20,7 +20,7 @@ page-mealbox-configurator-options {
         }
     }
 
-    .button {
+    .aars-button {
         font-size: 12px;
         text-align: center;
         padding: 1em;
