--- a/src/pages/mealboxes/mealboxes.scss
+++ b/src/pages/mealboxes/mealboxes.scss
@@ -48,4 +48,21 @@ page-mealboxes {
         justify-content: space-evenly;
 
     }
+
+    .aars-button {
+        font-size: 12px;
+        text-align: center;
+        padding: 1em;
+        display: inline-block;
+        border-radius: 3px;
+        background-color: #fff;
+        color: #000;
+        margin: 0 4px 1rem 4px;
+        &.selected {
+            background: #00884a;
+            color: #fff;
+        }
+    }
+
+
 }
