--- a/src/theme/ionic.theme.aarstiderne.scss
+++ b/src/theme/ionic.theme.aarstiderne.scss
@@ -124,3 +124,7 @@
     color: color($colors, "action-bright");
     text-decoration: line-through;
 }
+
+.tab-button-text {
+    font-family: $font-family-standard;
+}
