--- a/src/pages/mealbox-configurator/mealbox-configurator.scss
+++ b/src/pages/mealbox-configurator/mealbox-configurator.scss
@@ -32,6 +32,9 @@ page-mealbox-configurator {
             background-color: #f7f7f4;
             border-radius: 50%;
             margin: 0 8px;
+            text-align: center;
+            display: inline-block;
+            padding: 0;
             &.selected {
                 background: #00884a;
                 color: #fff;
