select persons modal

--- a/src/pages/details-mealbox/details-mealbox.scss
+++ b/src/pages/details-mealbox/details-mealbox.scss
@@ -97,6 +97,8 @@ page-details-mealbox {
             padding: 16px;
             white-space: pre-line;
             background-color: #ffffff;
+            font-size: 15px;
+            line-height: 1.3;
         }
     }
     
