--- a/src/pages/mealbox-configurator/mealbox-configurator.scss
+++ b/src/pages/mealbox-configurator/mealbox-configurator.scss
@@ -41,4 +41,13 @@ page-mealbox-configurator {
             }
         }
     }
+
+    .price-fat {
+        font-size: 18px;
+        font-weight: 500;
+        color: color($colors, theme-light);
+    }
+    .btn {
+        padding: .75em 1em;
+    }
 }
