--- a/src/pages/now/now.scss
+++ b/src/pages/now/now.scss
@@ -20,7 +20,7 @@ page-now {
             flex: 1 0 auto;
             img {
                 display: block;
-                margin-bottom: 1rem;
+                margin: 0 auto 1rem;
                 min-height: 150px; //calc(100vw - (7 * 1rem));
             }
         }
