--- a/src/pages/details/details.scss
+++ b/src/pages/details/details.scss
@@ -6,7 +6,9 @@ page-details {
             overflow: hidden;
             position: relative;
             img {
-                transform: translateY(calc(100px - 50%));
+                transform: translateY(calc(100px - 50%)) translateX(-50%);
+                position: relative;
+                left: 50%;
             }
         }
         &-header {
