--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -51,8 +51,8 @@ $colors: (
   action-light: #f05050,
   action-dark: #D94848,
   action-bright: #e84141,
-  sand-background: #f7f7f4,
-  sand-border: #eeeeee,
+  sand-background: #f3f2ee,
+  sand-border: #dfdfdf,
   white: #ffffff,
   black: #000000,
   text-light: #aaaaaa,
@@ -79,14 +79,25 @@ $list-ios-header-letter-spacing: 0;
 $list-ios-header-font-size: 1.5rem;
 $list-ios-header-font-weight: 500;
 
-$item-ios-body-text-font-size: 1.5rem;
+$item-ios-body-text-font-size: 1.6rem;
 $toolbar-ios-title-font-weight: 400;
+
+/* Color bottom tabs icon + text */
+$tabs-md-tab-icon-color-active: color($colors, action-bright);
+$tabs-md-tab-icon-color: #8c8c8c;
+$tabs-md-tab-text-color-active: color($colors, action-bright);
+$tabs-md-tab-text-color: #8c8c8c;
 
 $tabs-ios-tab-icon-color-active: color($colors, action-bright);
 $tabs-ios-tab-icon-color: #8c8c8c;
-
 $tabs-ios-tab-text-color-active: color($colors, action-bright);
 $tabs-ios-tab-text-color: #8c8c8c;
+/* /Color bottom tabs icon + text */
+
+
+$img-placeholder-background: #fff;
+
+
 
 // App Material Design Variables
 // --------------------------------------------------
