change lifecycle event to test if there is a difference on iOS

--- a/src/pages/mealboxes/mealboxes.scss
+++ b/src/pages/mealboxes/mealboxes.scss
@@ -68,5 +68,9 @@ page-mealboxes {
         background: color($colors, theme-dark);
         text-align: center;
         padding: .75em 0 0;
+        position: sticky;
+        top: 0;
+        left: 0;
+        z-index: 1;
     }
 }
