--- a/src/pages/mealboxes/mealboxes.scss
+++ b/src/pages/mealboxes/mealboxes.scss
@@ -65,7 +65,7 @@ page-mealboxes {
     }
 
     .chooser {
-        background: color($colors, theme-dark);
+        background-color: $c-theme-dark;
         text-align: center;
         padding: .75em 0 0;
         position: sticky;
