--- a/src/theme/ionic.theme.aarstiderne.scss
+++ b/src/theme/ionic.theme.aarstiderne.scss
@@ -76,10 +76,11 @@
         color: $c-text-light;
     }
 }
-.bg-cta {
-    background-color: $c-action-bright;
-}
 
+.details-cta-bg {
+    background-color: $c-action-bright;
+    padding: 0;
+}
 .details-cta {
     font-size: 18px;
     display: block;
@@ -88,8 +89,10 @@
     appearance: none;
     color: #fff;
     text-align: center;
-    background-color: transparent;
+    background-color: $c-action-bright;
     line-height: 2;
+    padding: 0;
+    margin: 0;
 }
 
 .btn-order-date {
