--- a/src/pages/now/now.scss
+++ b/src/pages/now/now.scss
@@ -15,15 +15,13 @@ page-now {
         flex-flow: column;
     
         &-image {
-            display: block;
-            min-height: 150px; //calc(100vw - (7 * 1rem));
             flex: 1 0 auto;
-            height: auto !important;
-            //img {
-            //    display: block;
-            //    margin: 0 auto 1rem;
-            //    min-height: 150px; //calc(100vw - (7 * 1rem));
-            //}
+            img  {
+                display: block;
+                height: auto;
+                width: 440px;
+                margin: 1rem auto;
+                }
         }
 
         &-name {
