--- a/src/pages/recipe/recipe.scss
+++ b/src/pages/recipe/recipe.scss
@@ -1,3 +1,17 @@
 page-recipe {
 
+    .userImages {
+        .grid-images {
+            display: flex;
+            flex-flow: row wrap;
+            align-items: center;
+        }
+
+        img {
+            width: 50%;
+            height: auto;
+            //display: block;
+        }
+    }
+
 }
