--- a/src/pages/now/now.scss
+++ b/src/pages/now/now.scss
@@ -6,9 +6,9 @@ page-now {
 
     .tile {
         background-color: #fff;
-        border: 1px solid $c-sand-border;
+        border: 1px solid #eaeaea;
         padding: 1rem;
-        font-size: 14px;
+        font-size: 15px;
         margin: .5rem;
         height: calc(100% - 1rem);
         display: flex;
@@ -17,17 +17,14 @@ page-now {
         &-image {
             flex: 1 0 auto;
             img  {
-                min-width: 151px;
-                min-height: 151px;
+                height: 120px;
                 display: block;
-                height: auto;
-                width: 440px;
-                margin: 1rem auto;
+                margin: 0 auto;
             }
         }
 
         &-name {
-            margin-top: 1em;
+            margin-top: .5em;
         }
 
         &-price {
