--- a/src/theme/ionic.theme.aarstiderne.scss
+++ b/src/theme/ionic.theme.aarstiderne.scss
@@ -147,13 +147,13 @@
     font-family: $font-family-standard;
 }
 
-.zEWidget-launcher {
-    bottom: calc(55px + env(safe-area-inset-bottom)) !important;
-}
-
-.zEWidget-webWidget {
-    &--active {
-        top: env(safe-area-inset-top) !important;
-        height: calc(100% - env(safe-area-inset-top) - env(safe-area-inset-bottom)) !important;
-    }
-}
+//.zEWidget-launcher {
+//    bottom: calc(55px + env(safe-area-inset-bottom)) !important;
+//}
+//
+//.zEWidget-webWidget {
+//    &--active {
+//        top: env(safe-area-inset-top) !important;
+//        height: calc(100% - env(safe-area-inset-top) - env(safe-area-inset-bottom)) !important;
+//    }
+//}
