try with firebase push

--- a/src/pages/mealboxes/mealboxes.scss
+++ b/src/pages/mealboxes/mealboxes.scss
@@ -20,6 +20,9 @@ page-mealboxes {
         color: #fff;
         text-transform: uppercase;
     }
+    .mealbox__menu-list {
+        font-size: 1.1em;
+    }
     .mealbox__menu-btn {
         position: absolute;
         left: 16px;
