--- a/src/pages/modal-order-complete/modal-order-complete.scss
+++ b/src/pages/modal-order-complete/modal-order-complete.scss
@@ -1,4 +1,26 @@
 page-modal-order-complete {
+    .content-ios {
+        background-color: rgba(0, 0, 0, .35);
+        backdrop-filter: blur(6px);
+    }
+    .scroll-content{
+        overflow-y: hidden;
+    }
+
+    .box {
+        background-color: #fff;
+        padding: 1rem;
+        position: fixed;
+        top: 50%;
+        transform: translateY(-50%);
+        width: calc(100% - 32px);
+        border-radius: 3px;
+        text-align: center;
+    }
+    .list {
+        margin-bottom: 0;
+    }
+
     .back-button.show-back-button {
         display: none;
     }
