--- a/src/theme/ionic.theme.aarstiderne.scss
+++ b/src/theme/ionic.theme.aarstiderne.scss
@@ -143,17 +143,11 @@
     text-decoration: line-through;
 }
 
+.current-price {
+    color: $c-theme-dark;
+}
+
 .tab-button-text {
     font-family: $font-family-standard;
 }
 
-//.zEWidget-launcher {
-//    bottom: calc(55px + env(safe-area-inset-bottom)) !important;
-//}
-//
-//.zEWidget-webWidget {
-//    &--active {
-//        top: env(safe-area-inset-top) !important;
-//        height: calc(100% - env(safe-area-inset-top) - env(safe-area-inset-bottom)) !important;
-//    }
-//}
